fix: no more line numbers for word wrapping

--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -30,12 +30,13 @@ code {
 }
 
 .highlight {
-
 	table,
 	td,
 	pre {
 		border: 0;
 		border-collapse: separate;
+		white-space: pre-wrap;
+		margin: 5px;
 	}
 }
 
